Additional styles for tags to prevent them wrapping

--- a/src/Employer/Employer.Web/wwwroot/css/app.css
+++ b/src/Employer/Employer.Web/wwwroot/css/app.css
@@ -59,6 +59,8 @@
 
 .app-tag {
   font-size: inherit;
+  white-space: nowrap;
+  max-width: max-content;
 }
 
 .app-tag--transferred {
