--- a/src/Provider/Provider.Web/wwwroot/css/app.css
+++ b/src/Provider/Provider.Web/wwwroot/css/app.css
@@ -62,6 +62,8 @@
 
 .app-tag {
   font-size: inherit;
+  white-space: nowrap;
+  max-width: max-content;
 }
 
 .app-tag--transferred {
